force-app/main/modules/setup/objects/Protected_Subscriber_Setting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A field to store a description of this setting.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>