force-app/main/modules/setup/objects/Protected_Subscriber_Setting__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description>A field to store a true or false value for this setting.</description>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>