force-app/main/modules/setup/objects/Protected_Subscriber_Setting__mdt/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>This field stores an identifier value of another system.</description>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>