force-app/main/modules/setup/objects/Protected_Subscriber_Setting__mdt/fields/Foreign_Key__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Key__c</fullName>
    <description>This field stores an external identifier.</description>
    <label>Foreign Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>