force-app/main/modules/setup/objects/Protected_Subscriber_Setting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>A field to store a text value for this setting.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>